# robot-simulation-v1.4

./: README.md
gazebo_control_plugin/: CMakeLists.txt  package.xml
gazebo_control_plugin/include/gazebo_control_plugin/: gazebo_control_plugin.h
gazebo_control_plugin/src/: gazebo_control_plugin.cpp
gazebo_control_plugin/test/: test_control_plugin_read.cpp  test_control_plugin_write.cpp
process_commu/: CMakeLists.txt  package.xml
process_commu/include/process_commu/: arm_shm.h  gripper_shm.h  robot_state_shm.h  sem_common.h  shm_common.h
process_commu/src/: sem_common.cpp  shm_common.cpp
process_commu/test/: test_sem_common.cpp  test_shm_common.cpp
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: test_panda_description.launch.py
robot_description/urdf/: panda.sdf  panda.urdf  panda.xacro  panda_arm.xacro  panda_gripper.xacro  panda_hw_interface.xacro  visual_material.xacro
robot_fun/: CMakeLists.txt  package.xml
robot_fun/include/robot_fun/: robot_fun.h
robot_fun/src/: robot_fun.cpp  trigger_state_sub.cpp
robot_fun/test/: test_get_arm_control_mode.cpp  test_set_joint_positions.cpp  test_switch_to_target_controller.cpp  test_trigger.cpp
robot_hw_interface/: CMakeLists.txt  package.xml  robot_hw_interface.xml
robot_hw_interface/config/: robot_controllers.yaml
robot_hw_interface/include/robot_hw_interface/: controller_configure.h  robot_hw_interface.h
robot_hw_interface/launch/: robot_hw_interface.launch.py
robot_hw_interface/rviz/: panda.rviz
robot_hw_interface/src/: controller_configure.cpp  robot_hw_interface.cpp  start_controller.cpp
robot_info/: CMakeLists.txt  package.xml
robot_info/include/robot_info/: arm_info.h  gripper_info.h  robot_info.h  robot_macro.h
robot_info/src/: arm_info.cpp  gripper_info.cpp  robot_info.cpp
robot_info/test/: test_robot_info.cpp
robot_sim_world/: README.md
robot_sim_world/panda/: model.config  panda.sdf
robot_sim_world/world/: panda.world
