<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_hw_interface</name>
  <version>1.4.0</version>
  <description>robot hardware interface</description>
  <maintainer email="songtangzhong@163.com">stz</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>robot_info</depend>
  <depend>process_commu</depend>
  <depend>controller_manager_msgs</depend>
  <depend>std_msgs</depend>
  <depend>robot_fun</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
